# boids

./: Cargo.toml  boidlib.js  boidlib_bg.wasm  index.html  index.js  package.json  random.js
.github/workflows/: build-web.yml
src/: boid.rs  boids.rs  lib.rs  main.rs  native.rs  vec.rs  web.rs
web/: boidlib.d.ts  boidlib_bg.wasm.d.ts  index.html  index.js  style.css
